[package]
name = "minecraft-statue"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob = "0.3"
image = "0.25"
once_cell = "1.19.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
